--- a/client/recipes/recipe.html
+++ b/client/recipes/recipe.html
@@ -9,5 +9,6 @@
         <span class="ingredient">{{name}} - {{amount}}</span>
       {{/each}}
     </p>
+    <a href="/recipe/{{_id}}">View Details</a>
   </article>
 </template>
