--- a/client/recipes/recipe.html
+++ b/client/recipes/recipe.html
@@ -19,5 +19,7 @@
         Add To Menu
       </button>
     {{/if}}
+    {{> quickForm collection="Recipes" id=this._id type="update" doc=this
+      autosave=true}}
   </article>
 </template>
